# meteocatpy

./: .gitignore  .gitlab-ci.yml  .releaserc  .releaserc.toml  CHANGELOG.md  README.md  filetree.py  filetree.txt  package-lock.json  package.json  pyproject.toml  releaserc.json  setup.cfg  setup.py
.github/workflows/: release.yml
examples/: _common.py  _secrets.py  basic.py  get-lightnings-map.py
meteocatpy/: __init__.py  client.py  const.py  data.py  exceptions.py  forecast.py  helpers.py  interface.py  station.py  stations.py  symbols.py  town.py  townstations.py  variables.py  version.py
tests/: data_test.py  import_test.py  integration_test.py  integration_test_alerts.py  integration_test_complete.py  integration_test_forecast.py  integration_test_infostation.py  integration_test_lightning.py  integration_test_quotes.py  integration_test_station_data.py  integration_test_stations.py  integration_test_symbols.py  integration_test_town.py  integration_test_town_stations.py  integration_test_uvi.py  integration_test_variables.py  test_client.py
