[tool.poetry]
name = "meteocatpy"
version = "1.0.6"
description = "Script para obtener datos meteorológicos de la API de Meteocat"
authors = ["figorr <jdcuartero@yahoo.es>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/figorr/meteocatpy"
keywords = ['meteocatpy', 'meteocat']


[tool.poetry.dependencies]
python = ">=3.12,<4.0"
simplejson = "^3.19.3"
aiofiles = "^24.1.0"
voluptuous = ">=0.15.2"
geopy = "^2.4.1"
tzdata = "^2024.2"
aiohttp = [
    {version = ">=3.10.11,<4.0.0", python = "<3.14"},
    {version = ">=3.8.0", python = ">=3.14"}
]
diskcache = "^5.6.3"


[tool.semantic_release]
branch = "master"  # Define la rama desde la que se harán los lanzamientos
version_source = "commit"  # Determina la versión basada en los commits
version_variable = "meteocatpy/version.py:__version__"  # Ubicación de la variable de versión
changelog = { file = "CHANGELOG.md" }  # Genera el changelog en el archivo especificado
upload_to_pypi = false  # Sube automáticamente la versión a PyPI
ci = false  # Cambiar a false si no usas CI/CD


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ==================== DEPENDENCIAS DE DESARROLLO ====================
[tool.poetry.group.dev.dependencies]
# Herramientas de release y publicación
python-semantic-release = "^7.28.1"
semantic-release = "^0.1.0"
twine = ">=3,<4"

# Testing
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-aiohttp = "*"
syrupy = "^4.7.2"
aresponses = "*"

# Linting y calidad de código
black = { version = ">19.10b0", allow-prereleases = true }
pyupgrade = "^3.4.0"
pre-commit = "^3.3.1"
flake8 = "*"
pylint = "*"
mypy = "*"
pydocstyle = "*"

# Documentación
Sphinx = ">=3.5.0,<7.0.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-autoapi = ">=1.7.0"
sphinx-copybutton = ">=0.3.1"
m2r2 = ">=0.2.7"
autoapi = ">=2.0.1"
tomlkit = ">=0.7.0"

# Otras herramientas útiles
tox = "*"
safety = ">=1.8.7"
pipdeptree = "^2.2.1"
detox = "*"

# Comentado (si lo necesitas en el futuro)
# aioresponses = [
#     {version = "^0.7.7", python = "<3.14"},
#     {version = "^0.8.0", python = ">=3.14"}
# ]